--- a/package.json
+++ b/package.json
@@ -16,5 +16,33 @@
     "min_width": 962,
     "min_height": 600,
     "resizable": true
+  },
+  "dependencies": {
+    "adm-zip": "~0.4.4",
+    "cheerio": "~0.13.1",
+    "clivas": "~0.1.4",
+    "i18n": "~0.4.1",
+    "iconv-lite": "~0.2.11",
+    "jschardet": "~1.1.0",
+    "moviedb": "~0.1.2",
+    "network-address": "0.0.4",
+    "node-uuid": "~1.4.1",
+    "numeral": "~1.5.3",
+    "peerflix": "~0.2.3",
+    "request": "~2.34.0",
+    "universal-analytics": "~0.3.4",
+    "url": "~0.7.9",
+    "xmlrpc": "~1.2.0",
+    "socket.io": "~0.9.16",
+    "express": "~3.4.8",
+    "ip": "~0.3.0"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.4",
+    "grunt-node-webkit-builder": "~0.1.17",
+    "grunt-contrib-sass": "~0.7.3",
+    "grunt-contrib-watch": "~0.6.0",
+    "grunt-contrib-compass": "~0.7.2",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
